# pynput-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
examples/: control.rs  monitor.rs
src/: lib.rs
src/keyboard/: darwin.rs  dummy.rs  hotkey.rs  linux.rs  mod.rs  uinput.rs  win32.rs  xorg.rs  xorg_keysyms.rs
src/mouse/: darwin.rs  dummy.rs  linux.rs  mod.rs  uinput.rs  win32.rs  xorg.rs
src/util/: mod.rs  xorg.rs
tests/: logic.rs
