[package]
name = "pynput"
version = "1.8.2"
edition = "2021"
rust-version = "1.74"
description = "Control and monitor input devices (mouse and keyboard). A Rust port of the pynput Python library."
license = "LGPL-3.0-or-later"
repository = "https://github.com/moses-palmer/pynput"
readme = "README.md"
keywords = ["keyboard", "mouse", "input", "automation", "hotkey"]
categories = ["os", "api-bindings"]

[lib]
name = "pynput"
path = "src/lib.rs"

[dependencies]
log = "0.4"

# --- Linux (X11 + uinput) ---
[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest", "record", "allow-unsafe-code"] }
evdev = "0.12"

# --- Windows ---
[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
]

# --- macOS ---
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"

[dev-dependencies]
env_logger = "0.11"

[features]
default = []
